[gd_scene load_steps=5 format=3 uid="uid://cgrj07tf2ngmx"]

[ext_resource type="PackedScene" uid="uid://c020nwuhxw7kw" path="res://core/recipe/recipe_info.tscn" id="1_jx7mr"]
[ext_resource type="Script" path="res://scenes/entities/npc/smithy/smithy_recipe_info.gd" id="2_vwerm"]
[ext_resource type="Resource" uid="uid://b7tdj35yq1wur" path="res://scenes/inventory/db/hotbar.tres" id="3_2aqfb"]
[ext_resource type="Script" path="res://core/complete_time.gd" id="4_4g6wd"]

[node name="SmithyRecipeInfo" instance=ExtResource("1_jx7mr")]
script = ExtResource("2_vwerm")
hotbar_db = ExtResource("3_2aqfb")

[node name="CompleteTime" type="Node" parent="." index="2"]
script = ExtResource("4_4g6wd")

[node name="Control" type="Control" parent="." index="3"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="HBoxContainer" type="HBoxContainer" parent="." index="4"]
layout_mode = 2
alignment = 2

[node name="CancelButton" type="Button" parent="HBoxContainer" index="0"]
layout_mode = 2
text = "Huỷ
"

[node name="OKButton" type="Button" parent="HBoxContainer" index="1"]
layout_mode = 2
text = "Nâng cấp"

[node name="Control2" type="Control" parent="." index="5"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[connection signal="pressed" from="HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
